fix: do not wrap top header on mobile

--- a/src/components/h2/h2.scss
+++ b/src/components/h2/h2.scss
@@ -23,5 +23,6 @@
     z-index: $layer-h2;
     padding: 0 15px;
     margin: 0;
+    white-space: nowrap;
   }
 }
